# Instacart-Basket-Recommendation

./: LICENSE  Makefile  README.md  algorithm-experiments.ipynb  final-dataset-generator.ipynb  final-model-trainer.ipynb  instacart-basket-analysis-data-check.ipynb  instacart-basket-analysis.ipynb  instacart-basket-analysis.py  instamart-feature-engineering.ipynb  model-trainer-script.py  post-mortem-of-lgb.ipynb  requirements.txt
dags/: instacart_transform_to_s3.py
instacart_basket_prediction/: environment.yml  pyproject.toml
instacart_basket_prediction/docs/: mkdocs.yml
instacart_basket_prediction/docs/docs/: index.md
instacart_basket_prediction/notebooks/: 1.01-deep-feature_engineering.ipynb  2.01-deep-final-model-trainer.ipynb  algorithm-experiments.ipynb  final-dataset-generator.ipynb  final-model-trainer.ipynb  xgb-interpretation.ipynb
instacart_basket_prediction/src/: final_model_trainer.py
models/: final_xgb_model.json
notebooks/: 0.01-deep-EDA.ipynb  1.01-deep-final-dataset-generator.ipynb  3.01-deep-understanding-lgb.ipynb  3.02-deep-understanding-xgb.ipynb
src/: __init__.py  f1-optimizer-script.py  final_dataset_generator.py  instacart-basket-analysis.py  instacart_model_trainer_script.py  model-trainer-script.py
